force-app/main/default/objects/Melissa_Integration__c/Melissa_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Melissa custom Setting contains the user id information</description>
    <label>Melissa Integration</label>
</CustomObject>