force-app/main/default/objects/Melissa_Integration__c/fields/globalAddressEndPoint__c.field-meta.xml
<CustomField>
    <fullName>globalAddressEndPoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>globalAddressEndPoint</label>
    <type>Url</type>
</CustomField>