force-app/main/default/objects/Melissa_Integration__c/fields/RequestTimeOut__c.field-meta.xml
<CustomField>
    <fullName>RequestTimeOut__c</fullName>
    <label>RequestTimeOut</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>