force-app/main/default/objects/Melissa_Integration__c/fields/USAAddressEndPoint__c.field-meta.xml
<CustomField>
    <fullName>USAAddressEndPoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>USA Address End Point</label>
    <type>Url</type>
</CustomField>