force-app/main/default/objects/Melissa_Integration__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>