force-app/main/default/objects/Melissa_Integration__c/fields/ZipEndPointURL__c.field-meta.xml
<CustomField>
    <fullName>ZipEndPointURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip End Point</label>
    <type>Url</type>
</CustomField>